# py_web_02

./: Dockerfile  pyproject.toml
bot_project/: main.py
bot_project/assistant_bot/: addressbook.pkl  addressbook_classes.py  data.py  handlers.py  storage.py  utils.py
